connect with database oracle

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=top-it
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=system
+spring.datasource.password=6232
+spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
+spring.security.enabled=false
