--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=system
-spring.datasource.password=6232
-spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:postgresql://localhost:5432/top-it
+spring.datasource.username=top-it
+spring.datasource.password=top-it
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 spring.security.enabled=false
+spring.docker.compose.enabled=false
