--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -8,24 +8,11 @@
         <version>3.3.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>faculty</groupId>
-    <artifactId>top-it</artifactId>
+    <groupId>com.ecommerce</groupId>
+    <artifactId>shopease</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>top-it</name>
-    <description>top-it</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+    <description>Top_it</description>
     <properties>
         <java.version>21</java.version>
     </properties>
@@ -110,6 +97,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
