change table to list fix database initialization everytime get all products

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/top-it
 spring.datasource.username=top-it
 spring.datasource.password=top-it
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.sql.init.mode=never
 
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create
+
+#set this to create if the schema is not created!
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 spring.docker.compose.enabled=false
